Data upload from google drive working

--- a/lab1/random_forest.ipynb
+++ b/lab1/random_forest.ipynb
@@ -32,7 +32,7 @@
       },
       "cell_type": "code",
       "source": [
-        "# Random Forest"
+        "# Random Forest on Morgan Fingerprint"
       ],
       "execution_count": 0,
       "outputs": []
@@ -41,26 +41,93 @@
       "metadata": {
         "id": "82061CNz_-en",
         "colab_type": "code",
+        "outputId": "7526be90-e0c5-411c-d736-30a244a9248a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "917a6429-8ac5-4350-c1d8-2cfd58a499a1"
+          "height": 122
+        }
       },
       "cell_type": "code",
       "source": [
-        "print('hi')"
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "hi\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "WzizVlZpLJhS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "with open('/content/gdrive/My Drive/Research/Chemistry/Classes/delaney.csv', 'r') as f:\n",
+        "  f.readline()\n",
+        "  data = []\n",
+        "  for line in f:\n",
+        "    smiles, target = line.strip().split(',')\n",
+        "    target = float(target)\n",
+        "    data.append((smiles, target))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "XGSD_rXwNCkC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0d73ae06-abbb-4cf9-8fca-cd653142dd00"
+      },
+      "cell_type": "code",
+      "source": [
+        "data[0]"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('OCC3OC(OCC2OC(OC(C#N)c1ccccc1)C(O)C(O)C2O)C(O)C(O)C3O', -0.77)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "_EkDVZslNDa9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
