Undoing change to MoleculeDataset

--- a/lab1/random_forest.ipynb
+++ b/lab1/random_forest.ipynb
@@ -26,16 +26,13 @@
     },
     {
       "metadata": {
-        "id": "fWzc8taU_wfk",
-        "colab_type": "code",
-        "colab": {}
+        "id": "yXAB2YFIhjZ7",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
         "# Random Forest on Morgan Fingerprint"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "metadata": {
@@ -57,7 +54,7 @@
         "import sys\n",
         "sys.path.append('/usr/local/lib/python3.6/site-packages/')"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +290,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +407,7 @@
         "model = RandomForestRegressor(random_state=42)\n",
         "model.fit(train_data.morgans(), train_data.targets())"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +454,7 @@
         "preds = model.predict(test_data.morgans())\n",
         "print('rmse = {:.4f}'.format(rmse(test_data.targets(), preds)))"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
