Load data from github on lab 2

--- a/lab2/feed_forward_neural_network.ipynb
+++ b/lab2/feed_forward_neural_network.ipynb
@@ -38,10 +38,10 @@
       "metadata": {
         "id": "G7Yw-FhrOcHs",
         "colab_type": "code",
-        "outputId": "7acddbea-2643-4c3e-ed0f-8e661b170e7d",
+        "outputId": "aa080d05-a88e-4068-866b-bb92018e1375",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1904
+          "height": 2278
         }
       },
       "cell_type": "code",
@@ -52,16 +52,19 @@
         "!conda install -q -y --prefix /usr/local -c rdkit rdkit pytorch\n",
         "\n",
         "import sys\n",
-        "sys.path.append('/usr/local/lib/python3.6/site-packages/')"
+        "sys.path.append('/usr/local/lib/python3.6/site-packages/')\n",
+        "\n",
+        "!wget https://raw.githubusercontent.com/swansonk14/chemprop-intro/master/data/delaney_train.csv\n",
+        "!wget https://raw.githubusercontent.com/swansonk14/chemprop-intro/master/data/delaney_test.csv"
       ],
       "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2018-12-27 07:39:53--  https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
-            "Resolving repo.anaconda.com (repo.anaconda.com)... 104.17.108.77, 104.17.111.77, 104.17.110.77, ...\n",
-            "Connecting to repo.anaconda.com (repo.anaconda.com)|104.17.108.77|:443... connected.\n",
+            "--2018-12-27 08:02:20--  https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
+            "Resolving repo.anaconda.com (repo.anaconda.com)... 104.17.111.77, 104.17.108.77, 104.17.107.77, ...\n",
+            "Connecting to repo.anaconda.com (repo.anaconda.com)|104.17.111.77|:443... connected.\n",
             "HTTP request sent, awaiting response... 416 Requested Range Not Satisfiable\n",
             "\n",
             "    The file is already fully retrieved; nothing to do.\n",
@@ -169,7 +172,29 @@
             "\n",
             "Preparing transaction: ...working... done\n",
             "Verifying transaction: ...working... done\n",
-            "Executing transaction: ...working... done\n"
+            "Executing transaction: ...working... done\n",
+            "--2018-12-27 08:03:04--  https://raw.githubusercontent.com/swansonk14/chemprop-intro/master/data/delaney_train.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 27140 (27K) [text/plain]\n",
+            "Saving to: ‘delaney_train.csv.2’\n",
+            "\n",
+            "delaney_train.csv.2 100%[===================>]  26.50K  --.-KB/s    in 0.007s  \n",
+            "\n",
+            "2018-12-27 08:03:04 (3.80 MB/s) - ‘delaney_train.csv.2’ saved [27140/27140]\n",
+            "\n",
+            "--2018-12-27 08:03:05--  https://raw.githubusercontent.com/swansonk14/chemprop-intro/master/data/delaney_test.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3469 (3.4K) [text/plain]\n",
+            "Saving to: ‘delaney_test.csv.2’\n",
+            "\n",
+            "delaney_test.csv.2  100%[===================>]   3.39K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2018-12-27 08:03:05 (49.7 MB/s) - ‘delaney_test.csv.2’ saved [3469/3469]\n",
+            "\n"
           ],
           "name": "stdout"
         }
@@ -199,32 +224,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "82061CNz_-en",
-        "colab_type": "code",
-        "outputId": "e3d56a6a-8379-4b04-f9b6-878ec0528790",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "metadata": {
@@ -294,9 +293,8 @@
       },
       "cell_type": "code",
       "source": [
-        "def get_data(data_dir: str, dataset: str = 'delaney', split: str = None) -> MoleculeDataset:\n",
-        "  data_name = '{}_{}.csv'.format(dataset, split) if split is not None else '{}.csv'.format(dataset)\n",
-        "  data_path = os.path.join(data_dir, data_name)\n",
+        "def get_data(split: str) -> MoleculeDataset:\n",
+        "  data_path = 'delaney_{}.csv'.format(split)\n",
         "  with open(data_path) as f:\n",
         "    f.readline()\n",
         "    data = []\n",
@@ -319,8 +317,7 @@
       },
       "cell_type": "code",
       "source": [
-        "data_dir = '/content/gdrive/My Drive/Research/Chemistry/Classes'\n",
-        "train_data, test_data = get_data(data_dir, split='train'), get_data(data_dir, split='test')"
+        "train_data, test_data = get_data('train'), get_data('test')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -399,14 +396,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "e919f481-9297-4107-8bd2-891351a1b120"
+        "outputId": "cc5a55d1-0522-49ca-9c59-fa50a6267e35"
       },
       "cell_type": "code",
       "source": [
         "print(model)\n",
         "print('Number of parameters = {:,}'.format(param_count(model)))"
       ],
-      "execution_count": 12,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,7 +468,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 527
         },
-        "outputId": "7cddad1d-6658-42f6-faf9-c318a3d33b6a"
+        "outputId": "1256a54b-0e69-4700-e5bb-8b8e2ff93b9d"
       },
       "cell_type": "code",
       "source": [
@@ -480,41 +477,41 @@
         "  train_loss = train_epoch(model, optimizer, train_data, batch_size, epoch)\n",
         "  print('Epoch {}: Train loss = {:.4f}'.format(epoch, train_loss))"
       ],
-      "execution_count": 14,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 0: Train loss = 2.5902\n",
-            "Epoch 1: Train loss = 1.7545\n",
-            "Epoch 2: Train loss = 1.6322\n",
-            "Epoch 3: Train loss = 1.5005\n",
-            "Epoch 4: Train loss = 1.4121\n",
-            "Epoch 5: Train loss = 1.3321\n",
-            "Epoch 6: Train loss = 1.2655\n",
-            "Epoch 7: Train loss = 1.2096\n",
-            "Epoch 8: Train loss = 1.1549\n",
-            "Epoch 9: Train loss = 1.1149\n",
-            "Epoch 10: Train loss = 1.0802\n",
-            "Epoch 11: Train loss = 1.0396\n",
-            "Epoch 12: Train loss = 1.0121\n",
-            "Epoch 13: Train loss = 0.9749\n",
-            "Epoch 14: Train loss = 0.9523\n",
-            "Epoch 15: Train loss = 0.9273\n",
-            "Epoch 16: Train loss = 0.9070\n",
-            "Epoch 17: Train loss = 0.8872\n",
-            "Epoch 18: Train loss = 0.8635\n",
-            "Epoch 19: Train loss = 0.8415\n",
-            "Epoch 20: Train loss = 0.8273\n",
-            "Epoch 21: Train loss = 0.8075\n",
-            "Epoch 22: Train loss = 0.7860\n",
-            "Epoch 23: Train loss = 0.7762\n",
-            "Epoch 24: Train loss = 0.7599\n",
-            "Epoch 25: Train loss = 0.7485\n",
-            "Epoch 26: Train loss = 0.7350\n",
-            "Epoch 27: Train loss = 0.7218\n",
-            "Epoch 28: Train loss = 0.7051\n",
-            "Epoch 29: Train loss = 0.7009\n"
+            "Epoch 0: Train loss = 2.6107\n",
+            "Epoch 1: Train loss = 1.7606\n",
+            "Epoch 2: Train loss = 1.6369\n",
+            "Epoch 3: Train loss = 1.5026\n",
+            "Epoch 4: Train loss = 1.4129\n",
+            "Epoch 5: Train loss = 1.3318\n",
+            "Epoch 6: Train loss = 1.2642\n",
+            "Epoch 7: Train loss = 1.2080\n",
+            "Epoch 8: Train loss = 1.1533\n",
+            "Epoch 9: Train loss = 1.1138\n",
+            "Epoch 10: Train loss = 1.0785\n",
+            "Epoch 11: Train loss = 1.0382\n",
+            "Epoch 12: Train loss = 1.0103\n",
+            "Epoch 13: Train loss = 0.9736\n",
+            "Epoch 14: Train loss = 0.9510\n",
+            "Epoch 15: Train loss = 0.9283\n",
+            "Epoch 16: Train loss = 0.9064\n",
+            "Epoch 17: Train loss = 0.8871\n",
+            "Epoch 18: Train loss = 0.8641\n",
+            "Epoch 19: Train loss = 0.8421\n",
+            "Epoch 20: Train loss = 0.8287\n",
+            "Epoch 21: Train loss = 0.8086\n",
+            "Epoch 22: Train loss = 0.7877\n",
+            "Epoch 23: Train loss = 0.7781\n",
+            "Epoch 24: Train loss = 0.7620\n",
+            "Epoch 25: Train loss = 0.7514\n",
+            "Epoch 26: Train loss = 0.7380\n",
+            "Epoch 27: Train loss = 0.7242\n",
+            "Epoch 28: Train loss = 0.7079\n",
+            "Epoch 29: Train loss = 0.7038\n"
           ],
           "name": "stdout"
         }
@@ -569,36 +566,23 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "79a45a64-6828-415f-f306-f447d1c5cd5a"
+        "outputId": "ddf07a47-84b3-4aab-fa5b-d65f5282c4a1"
       },
       "cell_type": "code",
       "source": [
         "test_rmse = evaluate(model, test_data, batch_size)\n",
         "print('Test rmse = {:.4f}'.format(test_rmse))"
       ],
-      "execution_count": 19,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Test rmse = 1.1732\n"
+            "Test rmse = 1.1838\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "metadata": {
-        "id": "uIpZpYnInBL-",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
