Load data from github on lab 3

--- a/lab3/message_passing_neural_network.ipynb
+++ b/lab3/message_passing_neural_network.ipynb
@@ -48,7 +48,10 @@
         "!conda install -q -y --prefix /usr/local -c rdkit rdkit pytorch\n",
         "\n",
         "import sys\n",
-        "sys.path.append('/usr/local/lib/python3.6/site-packages/')"
+        "sys.path.append('/usr/local/lib/python3.6/site-packages/')\n",
+        "\n",
+        "!wget https://raw.githubusercontent.com/swansonk14/chemprop-intro/master/data/delaney_train.csv\n",
+        "!wget https://raw.githubusercontent.com/swansonk14/chemprop-intro/master/data/delaney_test.csv"
       ],
       "execution_count": 0,
       "outputs": []
@@ -137,9 +140,8 @@
       },
       "cell_type": "code",
       "source": [
-        "def get_data(data_dir: str, dataset: str = 'delaney', split: str = None) -> MoleculeDataset:\n",
-        "  data_name = '{}_{}.csv'.format(dataset, split) if split is not None else '{}.csv'.format(dataset)\n",
-        "  data_path = os.path.join(data_dir, data_name)\n",
+        "def get_data(split: str) -> MoleculeDataset:\n",
+        "  data_path = 'delaney_{}.csv'.format(split)\n",
         "  with open(data_path) as f:\n",
         "    f.readline()\n",
         "    data = []\n",
@@ -162,8 +164,7 @@
       },
       "cell_type": "code",
       "source": [
-        "data_dir = '/content/gdrive/My Drive/Research/Chemistry/Classes'\n",
-        "train_data, test_data = get_data(data_dir, split='train'), get_data(data_dir, split='test')"
+        "train_data, test_data = get_data('train'), get_data('test')"
       ],
       "execution_count": 0,
       "outputs": []
